<?php

namespace App\entities;

class Admin
{

}