CREATE DATABASE youcodemy;

USE youcodemy;

CREATE TABLE
    users (
        userID INT AUTO_INCREMENT PRIMARY KEY,
        first_name VARCHAR(150) NOT NULL,
        last_name VARCHAR(150) NOT NULL,
        email VARCHAR(255) UNIQUE NOT NULL,
        password VARCHAR(255) NOT NULL,
        role ENUM ('student', 'teacher', 'admin') DEFAULT 'student' NOT NULL,
        account_status ENUM ('active', 'suspended', 'pending') DEFAULT 'active',
        created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
    );

CREATE TABLE
    categories (
        categoryID INT AUTO_INCREMENT PRIMARY KEY,
        category_name VARCHAR(100) NOT NULL,
        created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
    );

CREATE TABLE
    tags (
        tagID INT AUTO_INCREMENT PRIMARY KEY,
        tag_name VARCHAR(100) NOT NULL,
        created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
    );

CREATE TABLE
    courses (
        courseID INT AUTO_INCREMENT PRIMARY KEY,
        title VARCHAR(255) NOT NULL,
        description TEXT NOT NULL,
        content_type ENUM ('video', 'text') NOT NULL,
        content_path VARCHAR(255) NOT NULL,
        categoryID INT NOT NULL,
        userID INT NOT NULL,
        created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
        updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
        FOREIGN KEY (categoryID) REFERENCES categories (categoryID) ON DELETE CASCADE,
        FOREIGN KEY (userID) REFERENCES users (userID) ON DELETE CASCADE
    );

CREATE TABLE
    course_tags (
        courseID INT NOT NULL,
        tagID INT NOT NULL,
        PRIMARY KEY (courseID, tagID),
        FOREIGN KEY (courseID) REFERENCES courses (courseID) ON DELETE CASCADE,
        FOREIGN KEY (tagID) REFERENCES tags (tagID) ON DELETE CASCADE
    );

CREATE TABLE
    enrollments (
        enrollID INT AUTO_INCREMENT PRIMARY KEY,
        courseID INT NOT NULL,
        userID INT NOT NULL,
        status ENUM ('enrolled', 'completed') DEFAULT 'enrolled',
        enrolled_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
        completed_at TIMESTAMP NULL DEFAULT NULL,
        FOREIGN KEY (courseID) REFERENCES courses (courseID) ON DELETE CASCADE,
        FOREIGN KEY (userID) REFERENCES users (userID) ON DELETE CASCADE
    );

CREATE TABLE
    comments (
        commentID INT AUTO_INCREMENT PRIMARY KEY,
        courseID INT NOT NULL,
        userID INT NOT NULL,
        comment TEXT NOT NULL,
        created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
        updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
        FOREIGN KEY (courseID) REFERENCES courses (courseID) ON DELETE CASCADE,
        FOREIGN KEY (userID) REFERENCES users (userID) ON DELETE CASCADE
    );

CREATE TABLE
    certificates (
        certificateID INT AUTO_INCREMENT PRIMARY KEY,
        certificate_title VARCHAR(255) NOT NULL,
        courseID INT NOT NULL,
        userID INT NOT NULL,
        issued_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
        FOREIGN KEY (courseID) REFERENCES courses (courseID) ON DELETE CASCADE,
        FOREIGN KEY (userID) REFERENCES users (userID) ON DELETE CASCADE,
        UNIQUE (courseID)
    );

CREATE TABLE
    notifications (
        notificationID INT AUTO_INCREMENT PRIMARY KEY,
        userID INT NOT NULL,
        message TEXT NOT NULL,
        status ENUM ('read', 'unread') DEFAULT 'unread',
        created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
        FOREIGN KEY (userID) REFERENCES users (userID) ON DELETE CASCADE
    );
